Closed Bug 223660 Opened 22 years ago Closed 18 years ago

After resizing the bookmarks manager window, the bookmark panes are shifted up

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino2.0

People

(Reporter: chrispetersen, Assigned: stuart.morgan+bugzilla)

References

Details

Attachments

(3 files)

Build: 2003102409 Platform: OS X 10.3 Expected Results: After resizing the the bookmark window, the both bookmarks panes should be visible What I got: The bookmarks panes are shifted up and can't access it. I can't access Bookmark Menu or Toolbar Bookmarks in the Bookmarks coolection pane. Steps to reproduce: 1) Select Manage Bookmarks. 2) Resize the window to the smallest possible size and mouse up. 3) Now, resize the window back to it's original size. 4) Notice the shifted panes.
Summary: After resizing the bookmarks manager window, the bookmarks panes are shifted up → After resizing the bookmarks manager window, the bookmark panes are shifted up
Blocks: 223181
I can verify that this still occurs (although to a lesser extent) as of today's CVS. I would first suspect that it's a NIB problem. I think that sometimes these kinds of nib problems are more apple's fault though? running 10.2.8
Target Milestone: --- → Camino0.9
We need to be smarter about setting the min window size to work around this Cocoa bug.
Mine.
Assignee: pinkerton → sfraser_bugs
I have a suspicion that fixing this bug will also fix bug 276055. Anyone know if they're related?
(In reply to comment #6) > I have a suspicion that fixing this bug will also fix bug 276055. Anyone know if > they're related? Apparently not :-( The fix for bug 224525 fixed bug 276055 but not this one.
Target Milestone: Camino0.9 → Camino1.0
Not for 1.0...
Target Milestone: Camino1.0 → Camino1.1
Note: what we need here is a way to set the min window size dynamically, based on the available space for the content area.
Severity: normal → minor
QA Contact: bookmarks
Target Milestone: Camino1.1 → Camino2.0
I had mostly-working code for comment 9 at some point; taking to remind me to find that and dust it off.
Assignee: sfraser_bugs → stuart.morgan
Target Milestone: Camino2.0 → ---
Attached patch fixSplinter Review
Enforces a minimum content size, rather than a minimum window size.
Attachment #316932 - Flags: review?(Jeff.Dlouhy)
Comment on attachment 316932 [details] [diff] [review] fix About time! :-P r=jeff
Attachment #316932 - Flags: review?(Jeff.Dlouhy) → review+
Attachment #316932 - Flags: superreview?(mikepinkerton)
Attachment #316932 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → Camino2.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: