Camino only - Bug 223660: Enforce a minimum content size for browser windows. r=jeff sr=pink